clean code for day 6